deployment-net.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: arquetipo-net
  name: arquetipo-net
spec:
  replicas: 1
  selector:
    matchLabels:
      app: arquetipo-net
  template:
    metadata:
      labels:
        app: arquetipo-net
    spec:
      containers:
        - name: arquetipo-net
          image: fernandoalvarado07/arquetipo-net:1.0.0
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
          ports:
            - containerPort: 80
