ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-net

  labels:
    app: arquetipo-net
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: arquetipo-net
                port:
                  number: 80

  ingressClassName: nginx
